The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: Added `c.t.util.SlowProbeProxyTimer` for monitoring the duration
    of execution for timer tasks. ``PHAB_ID=D70279``

  * util-core: Introduced RootMonitor#set to set custom Monitor to RootMonitor.
    ``PHAB_ID=D70876``

  * util-stats: Introducing Verbosity Levels for StatsReceivers (see docs on `StatsReceiver`
    for more info). ``PHAB_ID=D70112``

Bug Fixes:

  * util-core: Fix some consistency issues with `c.t.util.ByteReaderImpl`. Advance its
    cursor by the number of bytes consumed via `readBytes(Int)`, not the number specified
    as a method argument. `readString` will now throw an UnderflowException if the number
    of bytes specified exceeds the remaining buffer length instead of silently making due
    with the rest of the buffer's contents. ``PHAB_ID=D78301``

Runtime Behavior Changes:

  * util-core: `c.t.util.Closable.sequence` now continues processing
    the `Closables` should any of their closes result in a failed `Future`
    and will return the first failure. Synchronous exceptions are now
    handled by lifting them into failed `Futures`. ``PHAB_ID=D62418``

  * util-events: `com.twitter.util.events.sinkEnabled` now defaults to false
    in preparation for removal in an upcoming release. ``PHAB_ID=D64437``

API Changes:

  * util-core: ByteWriter has been transformed into a true trait which can now
    be implemented outside of the com.twitter.io package. ``PHAB_ID=D59996``

  * util-core: The method ByteWriter.owned() has been moved to a sub trait,
    BufByteWriter, to separate the notion of the target buffer representation from the
    writer methods in order to make it easier to target different buffer representations.
    ``PHAB_ID=D61215``

  * util-stats: ``PHAB_ID=D59762``

   - `ProxyStatsReceiver.self` is now protected (was public before).