@@ -7,6 +7,7 @@ scala_library(
   dependencies=[
     'util/util-app/src/main/scala',
     'util/util-core/src/main/scala',
+    'util/util-stats/src/main/scala',
   ],
   fatal_warnings=True,
   sources=rglobs('*.scala'),
